# simdgrep

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  build-pcre2.sh  build-static.sh  ctype.c  fixture.c  fixture.h  grepper.c  grepper.h  grepper_rx.c  linebuf.c  main.c  pathutil.c  pathutil.h  pcre.c  pcre_helper.c  pcre_helper.h  printer.c  printer.h  stack.c  stack.h  test.c  vendor.c  vendor.h  wildmatch.c  wildmatch.h
stclib/priv/: utf8_prv.c  utf8_prv.h
test/: generate_long_file.py  main.cc  run.sh  test_stack.c
